--- a/index.html
+++ b/index.html
@@ -12,15 +12,15 @@
       <div class="header"><h1>TIC TAC TOE</h1></div>
       <div class="main">
         <div class="board">
-          <div>1</div>
-          <div>2</div>
-          <div>3</div>
-          <div>4</div>
-          <div>5</div>
-          <div>6</div>
-          <div>7</div>
-          <div>8</div>
-          <div>9</div>
+          <div class="position" id="row1-col1"></div>
+          <div class="position" id="row1-col2"></div>
+          <div class="position" id="row1-col3"></div>
+          <div class="position" id="row2-col1"></div>
+          <div class="position" id="row2-col2"></div>
+          <div class="position" id="row2-col3"></div>
+          <div class="position" id="row3-col1"></div>
+          <div class="position" id="row3-col2"></div>
+          <div class="position" id="row3-col3"></div>
         </div>
       </div>
       <div class="footer">
