--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container-grid">
       <div class="header"><h1>TIC TAC TOE</h1></div>
       <div class="main">
-        <h1 id="player-turn">Player X's turn</h1>
+        <h1 id="player-turn"></h1>
         <div class="board">
           <div class="position" id="row1-col1" data-spot="0"></div>
           <div class="position" id="row1-col2" data-spot="1"></div>
